Bug 494404 - After dragging a widget, its edges inappropriately show the hand cursor until plasmashell is restarted
Summary: After dragging a widget, its edges inappropriately show the hand cursor until...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: 6.2.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-10 10:04 UTC by Filip
Modified: 2024-10-19 03:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
showcase (1.15 MB, video/mp4)
2024-10-10 10:04 UTC, Filip
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Filip 2024-10-10 10:04:31 UTC
SUMMARY
Hovering over the edges of the widgets on desktop displays hand cursor like you can drag the widgets, but you can't (and shouldn't I think)

STEPS TO REPRODUCE
1. Add couple of widgets to desktop
2. Hover around the edges -> Hand cursor is displayed

OBSERVED RESULT
Hovering over the edges of the widgets on desktop displays hand cursor

EXPECTED RESULT
Hovering over the edges of the widgets on desktop doesn't display hand cursor because you can't drag widgets outside of the Edit Mode

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.0
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.3
Kernel Version: 6.11.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Filip 2024-10-10 10:04:56 UTC
Created attachment 174607 [details]
showcase
Comment 2 Nate Graham 2024-10-10 20:47:00 UTC
I can reproduce the issue in either of the following ways:
1. Drag widget from Widget Explorer to desktop
2. Hover over edges

1. Click on widget in widget explorer then close edit mode
2. Click-and-hold on widget an move it around, then exit edit mode
3. Hover over edges

In both cases, it appears to be triggered by dragging the widget.
Comment 3 Bug Janitor Service 2024-10-15 22:29:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4838
Comment 4 Niccolò Venerandi 2024-10-18 13:25:21 UTC
Git commit 701fbbc30a8600bb598cae48f9f67ed94619adf5 by Niccolò Venerandi.
Committed on 18/10/2024 at 13:25.
Pushed by niccolove into branch 'master'.

Unset item container custom cursor when config overlay is hidden

Otherwise, the "open hand cursor" will be stuck when hovering widgets
on the desktop.

M  +6    -0    components/containmentlayoutmanager/itemcontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/701fbbc30a8600bb598cae48f9f67ed94619adf5