Unset item container custom cursor when config overlay is hidden

Otherwise, the "open hand cursor" will be stuck when hovering widgets
on the desktop.

BUG:494404